--- a/src/components/MenuBar.css
+++ b/src/components/MenuBar.css
@@ -10,6 +10,10 @@ body {
 
 .navItems {
   display: flex;
+}
+
+.navItems > div {
+  display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
