add database connection to leaderboard add style to leaderboard list

--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -17,19 +17,16 @@ div {
   flex: 1;
 }
 
-.leaderboard {
-  /* display: flex;
-  flex-direction: row; */
-}
-
 .highScores {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  /* justify-content: space-around; */
 }
 
 .leftScores {
+  text-align: left;
 }
 
 .rightScores {
+  text-align: left;
 }
