make more mobile friendly

--- a/src/components/HomeBody.css
+++ b/src/components/HomeBody.css
@@ -1,5 +1,6 @@
 .mainContent {
   display: flex;
+  flex-direction: column;
 }
 
 .map {
@@ -7,6 +8,5 @@
 }
 
 .sideMenu {
-  border: 2px solid black;
   flex: 1;
 }
